<resources>
    <string name="app_name">FoodFacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_name_label">Food Name</string>
    <string name="food_calories_label">Calories</string>
    <string name="food_protein_label">Protein</string>
    <string name="food_protein">%1$s g</string>
    <string name="food_fat_label">Total Fat</string>
    <string name="food_fat">%1$s g</string>
    <string name="food_serving_quantity_label">Serving Quantity</string>
    <string name="delete_from_fav">Delete Food Item</string>
    <string name="foodFacts">FoodFacts</string>
    <string name="email_hint">Email</string>
    <string name="create_account_label">Create Account</string>
    <string name="password_hint">Password</string>
    <string name="login_label">Log In</string>
    <string name="create_account_email_label">Email Address</string>
    <string name="enter_password_label">Enter Password</string>
    <string name="search_button_label">Search</string>
    <string name="favourites_button_label">Favourites</string>
    <string name="search_food_hint">Search for a food...</string>
    <string name="saved_button_result">Saved</string>
    <string name="camera_button_label">Camera</string>
    <string name="save_button_label">Save</string>
    <string name="item_name_label">Item name</string>
    <string name="food_details_label">View Food Details</string>
</resources>