<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".FoodItemDescriptionFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imageView_FoodItemDescription"
        android:layout_width="150dp"
        android:layout_height="150dp"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_FoodNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_name_label"
            android:textSize="34sp"
            tools:text="Food Name" />

        <TextView
            android:id="@+id/textView_FoodItemDescription_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_FoodCalorieLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_calories_label"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_FoodItemDescription_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_FoodProteinLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_protein_label"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_FoodItemDescription_protein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_FoodFatLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_fat_label"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_FoodItemDescription_total_fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_FoodServingQtyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_serving_quantity_label"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_FoodItemDescription_serving_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_FoodItemDescription_deleteFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_from_fav" />

</LinearLayout>